# Krayte

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Makefile  create_img.py
bootstrap/: Makefile  acpi.S  arith64.S  asm_macros.h  bios.S  bootstrap.S  bootstrap.img  consts.h  elf_parser.S  first_sector.S  frame_alloc.S  interrupt.S  ioapic.S  lapic.S  linker.ld  logging.S  logging64.S  long_mode.S  mem_map.S  paging.S  pit.S  serial.S  syscall.S  tsc.S  video.S
bootstrap/tests/: arith64.S  bios.S  frame_alloc.S  interrupt.S  syscall.S  test_macros.h  tests.S
ext/: CMakeLists.txt
include/krayte/: kr8md.h  kr8md_std_helpers.h
include/krayte/kr8md/: defaults.h  intrinsic_cast_types.h  intrinsic_types.h  kr8md.h  kr8md_std_helpers.h  pak.h  pak_intrinsic_types.h
include/krayte/kr8md/operators/: add.h  addition.h  any.h  compare.h  comparison.h  construct.h  divide.h  division.h  increment.h  load.h  multiplication.h  multiply.h  operators.h  select.h  store.h  subtract.h  subtraction.h
include/krayte/kr8md/spmd/: if.h
include/krayte/utils/: chrono.h  framebuffer.h  ostream.h  string.h
src/: Makefile  asm.S  kr8md_test.cpp  main.cpp  main.rs  runtime.cpp  simd_test.cpp
